--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql2": "^3.4.5",
     "sequelize": "^6.32.1"
   }
